namespaces/live.cloud-platform.service.justice.gov.uk/stg-track-my-case-service-sit/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "stg-track-my-case-service-sit"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "sit"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "stg-track-my-case"
    cloud-platform.justice.gov.uk/application: "stg-track-my-case-service"
    cloud-platform.justice.gov.uk/owner: "Service Transformation Team: stgtransformationteam@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/stg-track-my-case-service"
    cloud-platform.justice.gov.uk/team-name: "stg-victims-pathfinder"
    cloud-platform.justice.gov.uk/review-after: ""
