namespaces/live.cloud-platform.service.justice.gov.uk/stg-track-my-case-service-sit/04-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-tmc-ui-ingress
  namespace: stg-track-my-case-service-sit
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: tmc-ui-sit
